fix(bs-templates): home dropdown alignment issue

--- a/public/bs-templates/templates/home/style.scss
+++ b/public/bs-templates/templates/home/style.scss
@@ -89,6 +89,11 @@
     }
 
     .dropdown {
+      & > button {
+        border-top: 0;
+        border-color: transparent;
+        background: transparent;
+      }
       .dropdown-menu {
         margin: -5px 0 0 8px;
         & > li {
